<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/sing_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:clickable="true"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:gravity="center">
        <com.example.rain4kymusicplayer.CircleImageView
            android:contentDescription="@string/description"
            android:id="@+id/sing_image"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/cover"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sing_name"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:text="@string/sing_name"
            android:textSize="25sp"
            android:gravity="center_vertical|start"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/singer_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/singer_name"
                android:gravity="start"/>
            <TextView
                android:id="@+id/sing_length"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/sing_length"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>